# Imitator

./: CMakeLists.txt  CMakeSettings.json  README.md
include/: Console.hpp  Cursor.hpp  File.hpp  Keyboard.hpp  main.hpp
res/: resources.rc
src/: Console.cpp  Cursor.cpp  File.cpp  Keyboard.cpp  main.cpp
